Updating client register form and styles
- New tab was created (Reference)
- All content of the forms were revised and changed
- CSS class styles were created or updated in the styles.css file
  in order to remove inline styles

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,15 +3,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="cache-control" content="no-cache">
-<link rel="icon" type="image/png" href="imagens/icones/icon.png" />
-<title>Projeto Carro</title>
-
+<link rel="icon" type="image/png" href="imagens/icones/icon.png"/>
+<title>Car Project</title>
 
 <!-- CSS -->
-<link href="bower_components/bootstrap/dist/css/bootstrap.min.css"
-    rel="stylesheet">
-<link href="bower_components/font-awesome/css/font-awesome.min.css"
-    rel="stylesheet">
+<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="styles/styles.css" rel="stylesheet">
 
 <!-- Angular Dependencies -->
