--- a/src/main/webapp/register/client/generalInformations.html
+++ b/src/main/webapp/register/client/generalInformations.html
@@ -1,38 +1,38 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<form name="formInfo">
+<form name="ganeralInformationsForm">
     <div class="row">
         <div class="form-group col-md-2 col-sm-2">
             <label for="inputCpf">CPF</label>
-            <input id="inputCpf" name="inputCpf" class="form-control" type="text" ng-model="client.cpf" placeholder="___.___.___-__" mask="999.999.999-99" clean="true" required limit/>
+            <input id="inputCpf" name="inputCpf" type="text" class="form-control" placeholder="___.___.___-__" mask="999.999.999-99" clean="true" ng-model="client.register" required limit/>
         </div>
         <div class="form-group col-md-1 col-sm-1">
-            <button type="button" class="btn btn-success" style="margin-top: 30px" ng-click="searchCpf(client.cpf)">Verificar</button>
+            <button type="button" class="sideButton btn btn-success" ng-click="searchCpf(client.register)">Verificar</button>
         </div>
     </div>
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
             <label for="inputName">Nome</label>
-            <input id="inputName" name="inputName" class="form-control" type="text" ng-model="client.name"/>
+            <input id="inputName" name="inputName" type="text" class="form-control" ng-model="client.name"/>
         </div>
         <div class="form-group col-md-4 col-sm-6">
             <label for="inputRg">RG</label>
-            <input id="inputRg" name="inputRg" class="form-control" type="text" ng-model="client.rg"/>
+            <input id="inputRg" name="inputRg" type="text" class="form-control" ng-model="client.rg"/>
         </div>
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputIssuingBody">Órgão Emissor</label>
-            <input id="inputIssuingBody" name="inputIssuingBody" class="form-control" type="text" ng-model="client.issuingBody"/>
+            <input id="inputIssuingBody" name="inputIssuingBody" type="text" class="form-control" ng-model="client.issuingBody"/>
         </div>
     </div>
     <div class="row">
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputDateOfBirth">Data de nascimento</label>
-            <input id="inputDateOfBirth" name="inputDateOfBirth" class="form-control" type="text" ng-model="client.dateOfBirth" placeholder="__/__/____" mask="99/99/9999" clean="true" required limit/>
+            <input id="inputDateOfBirth" name="inputDateOfBirth" type="text" class="form-control" placeholder="__/__/____" mask="99/99/9999" clean="true" ng-model="client.dateOfBirth" required limit/>
         </div>
         <div class="form-group col-md-2 col-sm-4">
             <label for="divGender">Sexo</label>
             <div name="divGender" class="radio">
-                <label><input type="radio" name="opcao" value="Masculino" ng-model="client.gender"/>Masculino</label>
-                <label><input type="radio" name="opcao" value="Feminino" ng-model="client.gender"/>Feminino</label>
+                <label><input name="opcao" type="radio" value="Masculino" ng-model="client.gender"/>Masculino</label>
+                <label><input name="opcao" type="radio" value="Feminino" ng-model="client.gender"/>Feminino</label>
             </div>
         </div>
         <div class="form-group col-md-2 col-sm-4">
@@ -47,11 +47,11 @@
         </div>
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputCityOfBirth">Naturalidade</label>
-            <input id="inputCityOfBirth" name="inputCityOfBirth" class="form-control" type="text" />
+            <input id="inputCityOfBirth" name="inputCityOfBirth" type="text" class="form-control" ng-model="client.cityOfBirth"/>
         </div>
         <div class="form-group col-md-1 col-sm-1">
             <label for="inputStateOfBirth">UF</label>
-            <input id="inputStateOfBirth" name="inputStateOfBirth" class="form-control" type="text"/>
+            <input id="inputStateOfBirth" name="inputStateOfBirth" type="text" class="form-control" ng-model="client.stateOfBirth"/>
         </div>
     </div>
     <div class="row">
@@ -59,11 +59,11 @@
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
             <label for="inputFatherName">Nome do Pai</label>
-            <input id="inputFatherName" name="inputFatherName" class="form-control" type="text" ng-model="client.fatherName"/>
+            <input id="inputFatherName" name="inputFatherName" type="text" class="form-control" ng-model="client.fatherName"/>
         </div>
         <div class="form-group col-md-4 col-sm-4">
             <label for="inputMotherName">Nome da Mãe</label>
-            <input id="inputMotherName" name="inputMotherName" class="form-control" type="text" ng-model="client.motherName"/>
+            <input id="inputMotherName" name="inputMotherName" type="text" class="form-control" ng-model="client.motherName"/>
         </div>
     </div>
 </form>
