Updating navigation and input fields
- Next and previous buttons were added in order to be easier navigate
  through the tabs
- The select inputs marital status and bank name now have more possible
  values

--- a/src/main/webapp/register/client/generalInformations.html
+++ b/src/main/webapp/register/client/generalInformations.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<form name="ganeralInformationsForm">
+<form name="generalInformationsForm">
     <div class="row">
         <div class="form-group col-md-2 col-sm-2">
             <label for="inputCpf">CPF</label>
@@ -39,10 +39,12 @@
             <label for="inputMaritalStatus">Estado Civil</label>
             <select id="inputMaritalStatus" class="form-control" ng-model="client.maritalStatus">
                 <option value="">Selecione</option>
-                <option value="Casado">Casado</option>
-                <option value="Solteiro">Solteiro</option>
-                <option value=Divorciado>Divorciado</option>
-                <option value="Viúvo">Viúvo</option>
+                <option value="Casado">Solteiro(a)</option>
+                <option value="Solteiro">Casado(a)</option>
+                <option value=Divorciado>Divorciado(a)</option>
+                <option value="Viúvo">Viúvo(a)</option>
+                <option value="Separado">Separado(a)</option>
+                <option value="Companheiro">Companheiro(a)</option>
             </select>
         </div>
         <div class="form-group col-md-2 col-sm-4">
