--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
 <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="styles/styles.css" rel="stylesheet">
+<link href="styles/animations.css" rel="stylesheet">
 
 <!-- Angular Dependencies -->
 <script src="bower_components/angular/angular.min.js"></script>
@@ -32,7 +33,7 @@
     <section ng-include=" 'header.html' " id="header" class="top-header"></section>
 
     <div class="view-container">
-        <section ng-view="" id="content" class="animate-fade-up"></section>
+        <section ng-view="" id="content"></section>
     </div>
 </body>
 </html>
