--- a/src/main/webapp/register/client/bank.html
+++ b/src/main/webapp/register/client/bank.html
@@ -1,8 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <form id="formBank" name="formBank">
-    <div class="row">
-        <button type="button" class="addItemButton btn btn-success" ng-click="addBankAccount()">Adicionar Conta Bancária</button>
-    </div>
     <br/>
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
@@ -48,5 +45,8 @@
         <div class="form-group col-md-2 col-sm-4">
             <button type="button" class="removeItemButton btn btn-danger" ng-click="removeBankAccount($index)">Remover Conta Bancária</button>
         </div>
+    </div>
+    <div class="row">
+        <button type="button" class="addItemButton btn btn-success" ng-click="addBankAccount()">Nova Conta Bancária</button>
     </div>
 </form>
