--- a/src/main/webapp/register/client/reference.html
+++ b/src/main/webapp/register/client/reference.html
@@ -1,8 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <form name="referenceForm">
-    <div class="row">
-        <button type="button" class="addItemButton btn btn-success" ng-click="addReference()">Adicionar Referência Pessoal</button>
-    </div>
     <br/>
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
@@ -34,5 +31,8 @@
         <div class="form-group col-md-2 col-sm-4">
             <button type="button" class="removeItemButton btn btn-danger" ng-click="removeReference($index)">Remover Referência Pessoal</button>
         </div>
+    </div>
+    <div class="row">
+        <button type="button" class="addItemButton btn btn-success" ng-click="addReference()">Nova Referência</button>
     </div>
 </form>
