--- a/src/main/webapp/register/client/work.html
+++ b/src/main/webapp/register/client/work.html
@@ -5,23 +5,60 @@
             <label for="inputCompanyName">Nome da Empresa</label>
             <input id="inputCompanyName" name="inputCompanyName" type="text" class="form-control" ng-model="client.companyName"/>
         </div>
+        <div class="form-group col-md-2 col-sm-4">
+            <label for="inputMonthlyIncome">Renda Mensal</label>
+            <div class="input-group">
+                <span id="inputMonthlyIncome" class="input-group-addon">R$</span>
+                <input id="inputMonthlyIncome" name="inputMonthlyIncome" type="text" class="form-control" ng-model="client.monthlyIncome"/>
+            </div>
+        </div>
         <div class="form-group col-md-2 col-sm-=4">
             <label for="inputTimeWorking">Tempo Trabalhado</label>
-            <input id="inputTimeWorking" name="inputTimeWorking" type="text" class="form-control" ng-model="client.timeWorking"/>
+            <div class="input-group">
+                <input id="inputTimeWorking" name="inputTimeWorking" type="text" class="form-control" ng-model="client.timeWorking"/>
+                <span id="inputTimeWorking" class="input-group-addon">anos</span>
+            </div>
         </div>  
-        <div class="form-group col-md-2 col-sm-4">
-            <label for="inputRenda">Renda Mensal</label>
-            <input id="inputRenda" name="inputRenda" type="text" class="form-control" placeholder="R$" ng-model="client.monthlyIncome"/>
-        </div>
     </div>
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
-            <label for="inputCargo">Cargo</label>
-            <input id="inputCargo" name="inputCargo" type="text" class="form-control" ng-model="client.position"/>
+            <label for="inputPosition">Cargo</label>
+            <input id="inputPosition" name="inputPosition" type="text" class="form-control" ng-model="client.position"/>
         </div>
         <div class="form-group col-md-2 col-sm-2">
             <label for="inputNumberOfBenefit">Número do Benefício</label>
             <input id="inputNumberOfBenefit" name="inputNumberOfBenefit" type="text" class="form-control" ng-model="client.numberOfBenefit"/>
+        </div>
+    </div>
+    <p class="bodyTitle bg-info">Endereço Comercial</p>
+    <div class="row">
+        <div class="form-group col-md-2 col-sm-2">
+            <label for="inputBusinessCep">CEP</label>
+            <input id="inputBusinessCep" name="inputBusinessCep" type="text" class="form-control" maxlength="9" placeholder="______-__" mask="99999-999" clean="true" ng-blur="searchCep(1)" ng-model="client.addresses[1].cep" required limit/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-1 col-sm-1">
+            <label for="inputBusinessState">UF</label>
+            <input id="inputBusinessState" name="inputBusinessState" type="text" class="form-control" ng-model="client.addresses[1].state" disabled/>
+        </div>
+        <div class="form-group col-md-2 col-sm-4">
+            <label for="inputBusinessCity">Cidade</label>
+            <input id="inputBusinessCity" name="inputBusinessCity" type="text" class="form-control" ng-model="client.addresses[1].city" disabled/>
+        </div>
+        <div class="form-group col-md-2 col-sm-4">
+            <label for="inputBusinessNeighbourhood">Bairro</label>
+            <input id="inputBusinessNeighbourhood" name="inputBusinessNeighbourhood" type="text" class="form-control" ng-model="client.addresses[1].neighbourhood" disabled/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-3 col-sm-4">
+            <label for="inputBusinessStreetName">Logradouro</label>
+            <input id="inputBusinessStreetName" name="inputBusinessStreetName" type="text" class="form-control" ng-model="client.addresses[1].streetName" disabled/>
+        </div>
+        <div class="form-group col-md-2 col-sm-4">
+            <label for="inputBusinessComplement">Complemento</label>
+            <input id="inputBusinessComplement" name="inputBusinessComplement" type="text" class="form-control" ng-model="client.addresses[1].complement"/>
         </div>
     </div>
 </form>
