Search menu added
- An option to search cep by state, city and street name was added

--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -6,24 +6,23 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>				
-                </button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"></button>
                 <a class="navbar-brand" href="#">Sistema</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar <span class="caret"></span></a>
+                    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#/register/client">Cliente</a></li>
                             <li style="padding-top: 10px;"><a href="#/register/vehicle">Veículo</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
+                    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pesquisar<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#/search/cep">CEP</a></li>
+                        </ul>
                 </ul>
             </div>
         </div>
