--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,6 @@
 <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="styles/styles.css" rel="stylesheet">
-<link href="styles/animations.css" rel="stylesheet">
 
 <!-- Angular Dependencies -->
 <script src="bower_components/angular/angular.min.js"></script>
@@ -27,6 +26,7 @@
 <!-- Controllers -->
 <script src="register/client/RegisterClientCtrl.js"></script>
 <script src="register/vehicle/RegisterVehicleCtrl.js"></script>
+<script src="search/cep/SearchCepCtrl.js"></script>
 
 </head>
 <body ng-app="system">
