--- a/src/main/webapp/register/client/contact.html
+++ b/src/main/webapp/register/client/contact.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="form-group col-md-3 col-sm-5">
             <label for="inputEmail">Email</label>
-            <input id="inputEmail" name="inputHomeEmail" type="text" class="form-control" ng-model="client.contacts[0].email"/>
+            <input id="inputEmail" name="inputEmail" type="text" class="form-control" placeholder="email@email.com" ng-model="client.email"/>
         </div>
     </div>
     <div class="row">
